removed testing from this branch

--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "cy:open": "yarn start --silent & cypress open",
-    "cy:run": "BROWSER=none yarn start & cypress run"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,9 +32,5 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^4.2.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "react-test-renderer": "^16.13.0"
   }
 }
