--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "grommet": "^2.11.2",
+    "j-tockauth": "^1.2.7",
     "polished": "^3.4.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
